cleanup and isolate grid

--- a/grate/index.styl
+++ b/grate/index.styl
@@ -14,9 +14,5 @@
     unshift()
 */
 
-@import '_settings'
-@import '_shame'
-@import '_utilities'
-@import '_reset'
-@import '_grid'
-@import '_typography'
+@import 'functions'
+@import 'grid'
