--- a/grate/grid.styl
+++ b/grate/grid.styl
@@ -141,7 +141,7 @@ unstack()
   &:last-child
     margin-{opposite-position(side)}: 0
       
-  if (layout_direction == RTL)
+  if (grate-layout-direction == RTL)
     text-align: right
   else
     text-align: left
