--- a/grate/settings.styl
+++ b/grate/settings.styl
@@ -1,3 +1,3 @@
-gutter = 3
-parent_first = false
-layout_direction = LTR
+grate-gutter = 3
+grate-parent-first = false
+grate-layout-direction = LTR
